# fblog_system

./: .gitignore  Cargo.toml  LICENSE  action.yml  astro.config.mjs  biome.json  package.json  pnpm-lock.yaml  renovate.json5  rustfmt.toml  snapshot.sh  snapshot_diff.sh  taplo.toml
.github/: dependabot.yml  ghalint.yaml
.github/actions/deploy/cloudflare_workers/main/: action.yml
.github/actions/deploy/cloudflare_workers/preview/: action.yml
.github/scripts/: capture_sample_build_vrt_data.sh
.github/workflows/: ci.yml  clippy.yml  cloudflare.yml  fmt.yml  junie.yml  main_to_stable_pr.yml  sample_build_vrt_capture.yml  sample_build_vrt_report.yml
.github/workflows/deploy/: cloudflare_workers.yml
.github/workflows/deploy/cloudflare_workers/: action.yml
.github/workflows/deploy/cloudflare_workers/main/: action.yml
.github/workflows/deploy/cloudflare_workers/preview/: action.yml
contents/articles/: markdown-style-guide.md  second-post.md
contents/articles/2025/06/: nested-post.md
crates/cloudflare_workers/: .gitignore  Cargo.toml  send_to_queue.sh  setup_resources.sh  setup_resources_for_preview.sh  snapshot_diff_for_preview.sh  update_snapshot.sh  upload_preview.sh  wrangler.preview.template.toml  wrangler.template.toml  wrangler.toml
crates/cloudflare_workers/migrations/: 0001_initialize.sql  0002_create_index.sql  0003_missing_table.sql
crates/cloudflare_workers/src/: admin_auth.rs  lib.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: common.rs  lib.rs  process_queue.rs  route.rs  traits.rs
crates/core/src/common/: headers.rs  macros.rs  sign.rs  verify.rs
crates/core/src/route/: admin.rs  articles.rs  users.rs  well_known.rs
crates/core/src/route/articles/: comments.rs  events.rs
crates/core/src/route/users/: accept_follow.rs  followers.rs  following.rs  inbox.rs  outbox.rs
crates/core/src/route/well_known/: host_meta.rs  webfinger.rs
crates/in_memory/server/: Cargo.toml
crates/in_memory/server/src/: main.rs
deploy_scripts/: build.sh
deploy_scripts/cloudflare/: deploy_preview.sh  deploy_prod.sh
src/: content.config.ts
src/pages/.well-known/: host-meta.ts
src/pages/__raw/articles/ap/: [...slug].json.ts
src/pages/__raw/articles/html/: [...slug].html.ts
src/pages/__raw/users/html/: [username].html.ts
src/pages/articles/: [...slug].json.ts  [slug].json.ts
src/pages/raw__/articles/ap/: [...slug].json.ts
src/pages/raw__/articles/author/: [...slug].ts
src/pages/raw__/users/ap/: [username].json.ts
src/pages/raw__/users/name/: [username].ts
src/pages/users/: [username].json.ts
src/plugins/: rehype-truncate-html.ts  remark-collect-images.ts
test_config/: .gitignore  Caddyfile  Dockerfile_mastodon  Dockerfile_misskey  Dockerfile_sharkey  compose.yml  private-key-for-test.pem  public-key-for-test.pem
test_config/mastodon/: .env.production  Dockerfile_db  credentials.ini  docker.env
test_config/misskey/: Dockerfile_db  credentials.ini  db-data.tar.xz  default.yml  docker.env
test_config/sharkey/: Dockerfile_db  credentials.ini  db-data.tar.xz  default.yml
test_config/test_data/cloudflare_workers/raw__/articles/ap/: article1.json
test_config/test_data/cloudflare_workers/raw__/articles/ap/dir0/: article-2.json
test_config/test_data/cloudflare_workers/raw__/articles/ap/dir0/dir1/: article_3.json
test_config/test_data/cloudflare_workers/raw__/articles/ap/dir0/dir1/dir2/: 4th-article.json
test_config/test_data/cloudflare_workers/raw__/articles/html/: article1.html
test_config/test_data/cloudflare_workers/raw__/articles/html/dir0/: article-2.html
test_config/test_data/cloudflare_workers/raw__/articles/html/dir0/dir1/: article_3.html
test_config/test_data/cloudflare_workers/raw__/articles/html/dir0/dir1/dir2/: 4th-article.html
test_config/test_data/cloudflare_workers/raw__/users/ap/: user1.json  user2.json
test_config/test_data/cloudflare_workers/raw__/users/html/: user1.html  user2.html
test_config/test_data/contents/articles/: first-post.md  third-post.md
test_config/test_data/contents/users/: default.yml
tests/: Cargo.toml
tests/src/: cloudflare_workers.rs  docker.rs  in_memory.rs  lib.rs
tests/src/docker/: mastodon.rs  misskey.rs  sharkey.rs
tests/tests/: cloudflare_workers_test.rs  e2e_test.rs
