[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]

[workspace]
resolver = "2"
members = [
    "crates/cloudflare_workers",
    "crates/core",
    "crates/in_memory/server",
    "tests"
]

[workspace.dependencies]
fblog_system_core = { path = "crates/core" }

arrayvec = { version = "0.7.6", features = ["serde"] }
axum = { version = "0.8.8", default-features = false, features = ["macros", "json", "query"] }
base64 = "0.22.1"
bitflags = "2.10.0"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
console_error_panic_hook = { version = "0.1.7" }
digest = "0.10.7"
futures = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
mime = "0.3.17"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
ring-compat = "0.8.0"
rsa = { version = "0.9.9", features = ["sha2", "pem"] }
rust-ini = "0.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-web = "0.1.3"
url = "2.5.7"
worker = { version = "0.7.2", features = ["http", "axum", "queue", "d1"] }
