[workspace.package]
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2024"
version = "0.1.0"

[workspace]
members = ["crates/cloudflare_workers", "crates/core", "crates/in_memory/server", "tests"]
resolver = "2"

[workspace.dependencies]
fblog_system_core = { path = "crates/core" }

arrayvec = { features = ["serde"], version = "0.7.6" }
axum = { default-features = false, features = ["json", "macros", "query"], version = "0.8.8" }
base64 = "0.22.1"
bitflags = "2.10.0"
bytes = "1.11.1"
chrono = { features = ["serde"], version = "0.4.43" }
console_error_panic_hook = { version = "0.1.7" }
digest = "0.10.7"
futures = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
mime = "0.3.17"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { features = ["json", "query", "stream"], version = "0.13.2" }
ring = { features = ["wasm32_unknown_unknown_js"], version = "0.17.14" }
ring-compat = "0.8.0"
rsa = { features = ["pem", "sha2"], version = "0.9.10" }
rust-ini = "0.21.3"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { features = ["full"], version = "1.49.0" }
tower = "0.5.3"
tower-http = { features = ["trace"], version = "0.6.8" }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-web = "0.1.3"
url = "2.5.8"
worker = { features = ["axum", "d1", "http", "queue"], version = "0.7.4" }
