[package]
authors = { workspace = true }
edition = { workspace = true }
name = "e2e_test"
version = "0.0.0"

[[test]]
name = "e2e_test"
path = "tests/e2e_test.rs"

[dependencies]
fblog_system_core = { workspace = true }

chrono = { workspace = true }
reqwest = { workspace = true }
rust-ini = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
