[package]
name = "fblog_system_frontend_cloudflare_workers"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace = true }
worker-macros = { workspace = true }
axum = { workspace = true }
tower-service = { workspace = true }
console_error_panic_hook = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
crossbeam-utils = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
