[package]
name = "fblog_system_frontend_cloudflare_workers"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fblog_system_core = { workspace = true }

arrayvec = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
crossbeam-utils = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-service = { workspace = true }
worker = { workspace = true }
worker-macros = { workspace = true }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
