[package]
authors = { workspace = true }
edition = { workspace = true }
name = "fblog_system_frontend_cloudflare_workers"
version = { workspace = true }

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
activitypub = []
default = ["activitypub"]
preview = []
test = []

[dependencies]
fblog_system_core = { workspace = true }

arrayvec = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = { workspace = true }
worker = { workspace = true }
