[package]
name = "fblog_system_in_memory_server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
fblog_system_core = { workspace = true }

arrayvec = { workspace = true, features = ["serde"] }
axum = { workspace = true, features = ["tokio", "http1"] }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
