[package]
authors = { workspace = true }
edition = { workspace = true }
name = "fblog_system_in_memory_server"
version = { workspace = true }

[dependencies]
fblog_system_core = { workspace = true }

arrayvec = { features = ["serde"], workspace = true }
axum = { features = ["http1", "tokio"], workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { features = ["derive"], version = "1.0.228" }
serde_json = { workspace = true }
tokio = { features = ["macros", "rt-multi-thread"], workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
